k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: <ns>
  labels:
    app.kubernetes.io/part-of: sample-service
