k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
  namespace: <ns>
spec:
  selector:
    app: sample
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
