k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  namespace: <ns>
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: <your-service.example.com>
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sample-service
                port:
                  number: 80
